Ensure version selector always visible

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -30,6 +30,10 @@
           mask-image: var(--md-admonition-icon--tip);
 }
 
+.md-header__topic {
+  opacity: revert !important;
+}
+
 .md-tabs__link {
   font-weight: 600;
 }
